Trivia aleatoria, con la opción correcta definida.

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -27,8 +27,10 @@
         <ion-item menu-close href="#/app/browse">
           Browse
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <!--Al abrir trivias en el menu, se lanza la primera trivia-->
+        <!-- obt href="#/app/trivia"  ng-click="launchTrivia()" enida de lista de preguntas-->
+        <ion-item menu-close href="#/app/trivia" >
+          Trivias
         </ion-item>
       </ion-list>
     </ion-content>
