algo de estilo y cambio en navbar

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,11 +21,11 @@
         <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <ion-item menu-close href="#/app/info">
+          Info
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
+        <ion-item menu-close href="#/app/puntajes">
+          Puntaje
         </ion-item>
         <!--Al abrir trivias en el menu, se lanza la primera trivia-->
         <!-- obt href="#/app/trivia"  ng-click="launchTrivia()" enida de lista de preguntas-->
