--- a/www/templates/puntajes.html
+++ b/www/templates/puntajes.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Browse">
   <ion-content>
-    <h1>Browse</h1>
+  <center>
+    <h1>PUNTAJES DE LA SEMANA</h1>
+  </center>
   </ion-content>
 </ion-view>
