--- a/www/css/animate.css
+++ b/www/css/animate.css
@@ -15,6 +15,13 @@
   animation-fill-mode: both;
 }
 
+.animated:focus{
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
 .animated.infinite {
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
