Mejoras visuales y fondo logo

--- a/www/templates/puntajes.html
+++ b/www/templates/puntajes.html
@@ -1,4 +1,5 @@
-<ion-view view-title="Browse">
+<ion-view view-title="Puntajes">
+<div class="background"></div>
   <ion-content>
   <center>
     <h1>PUNTAJES DE LA SEMANA</h1>
