--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,5 @@
 <ion-modal-view>
+<div class="background"></div>
   <ion-header-bar>
     <h1 class="title">Login</h1>
     <div class="buttons">
@@ -17,7 +18,7 @@
           <input type="password" ng-model="loginData.password">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
+          <button class="button button-block button-balanced" type="submit">Log in</button>
         </label>
       </div>
     </form>
