--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -11,8 +11,7 @@
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
-
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" id="menuTrivia">
     <ion-header-bar class="bar-stable">
       <h1 class="title">RPSapp Menu</h1>
     </ion-header-bar>
