--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -17,19 +17,22 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
+        <ion-item ng-show="permiso" menu-close ng-click="login()">
           Login
         </ion-item>
-        <ion-item menu-close href="#/app/info">
+        <ion-item ng-show="permiso" menu-close href="#/app/info">
           Info
         </ion-item>
-        <ion-item menu-close href="#/app/puntajes">
+        <ion-item ng-show="permiso" menu-close href="#/app/puntajes">
           Puntaje
         </ion-item>
         <!--Al abrir trivias en el menu, se lanza la primera trivia-->
         <!-- obt href="#/app/trivia"  ng-click="launchTrivia()" enida de lista de preguntas-->
-        <ion-item menu-close href="#/app/trivia" >
+        <ion-item  ng-show="permiso" menu-close href="#/app/trivia" >
           Trivias
+        </ion-item>
+        <ion-item ng-show="!permiso" menu-close href="#/app/privacidad" >
+          Declaracion de privacidad
         </ion-item>
       </ion-list>
     </ion-content>
