Declaracion de privacidad mejor

--- a/www/templates/privacidad.html
+++ b/www/templates/privacidad.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Declaracion de privacidad">
 <div class="background"></div>
-  <ion-content>
+  <ion-content ng-show="!permiso">
   <center>
   	<br/><br/>
     <h1>DECLARACION DE PRIVACIDAD</h1>
