--- a/www/css/animate.css
+++ b/www/css/animate.css
@@ -8,6 +8,25 @@
  * Copyright (c) 2016 Daniel Eden
  */
 
+ .animate-if {
+   border:1px solid black;
+   padding:10px;
+ }
+
+ .animate-if.ng-enter, .animate-if.ng-leave {
+   transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+ }
+
+ .animate-if.ng-enter,
+ .animate-if.ng-leave.ng-leave-active {
+   opacity:0;
+ }
+
+ .animate-if.ng-leave,
+ .animate-if.ng-enter.ng-enter-active {
+   opacity:1;
+ }
+
 .animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
