Toda la zona de logeo/Registro/deslogeo lista

--- a/www/templates/info.html
+++ b/www/templates/info.html
@@ -2,7 +2,7 @@
 <div class="background"></div>
   <ion-content>
   <center>
-    <h1>Informacion</h1>
+    <h1>Información</h1>
     <br/><br/>
     <div style="width:80%">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at urna in urna dapibus scelerisque sit amet vitae augue. Donec orci metus, ullamcorper in pretium et, egestas id nibh. In rhoncus, est id pretium faucibus, nunc nisi sollicitudin tellus, fringilla mattis quam enim non urna. Maecenas euismod, ligula ornare placerat egestas, sem lorem mollis ex, dapibus dignissim nisi dui id magna. Mauris luctus lobortis risus sit amet posuere. Mauris id luctus sem, ut gravida augue. Etiam sit amet feugiat mi. Suspendisse auctor nisi commodo nunc blandit, vel accumsan dolor viverra.
