--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,10 +18,10 @@
     <ion-content> 
       <ion-list>
         <ion-item ng-show="permiso" menu-close ng-click="login()">
-          Login
+          Iniciar sesión
         </ion-item>
         <ion-item ng-show="permiso" menu-close href="#/app/info">
-          Info
+          Información
         </ion-item>
         <ion-item ng-show="permiso" menu-close href="#/app/puntajes">
           Puntaje
@@ -32,7 +32,7 @@
           Trivias
         </ion-item>
         <ion-item ng-show="!permiso" menu-close href="#/app/privacidad" >
-          Declaracion de privacidad
+          Declaración de privacidad
         </ion-item>
       </ion-list>
     </ion-content>
