--- a/www/templates/privacidad.html
+++ b/www/templates/privacidad.html
@@ -3,7 +3,7 @@
   <ion-content ng-show="!permiso">
   <center>
   	<br/><br/>
-    <h1>DECLARACION DE PRIVACIDAD</h1>
+    <h1>DECLARACIÓN DE PRIVACIDAD</h1>
     <br/><br/><br/>
     <p style="width:70%">
     Esta aplicacion hace parte del Proyecto Rico pero Saludable a cargo tanto de la linea de Psicología de la Salud adscrita al grupo de Investigación de Psicología Cognitica como de la Unidad de Bienestar de la Facultad de Ingeniería de la Universidad de Antioquia, en colaboración con estudiantes de Ingeniería de Sistemas y el programa de extensión de la Escuela de Nutrición y Dietética de la misma universidad. <br/>
