--- a/www/templates/trivia.html
+++ b/www/templates/trivia.html
@@ -10,7 +10,7 @@
       </div>
 	  <div ng-show="!finish" style="width:70%; height: 100%; background-position: bottom;" id="triviaDiv">
 	  		<br/><br/>
-		    <h1 class="animated bounce" style="font-size: 40px; font-style: italic; font-family:cursive;">PREGUNTA:</h1>
+		    <image ></image>
 		    <br/><br/>
 		    <h1 id="pregunta" class="animated tada"> {{pregunta.title}} </h1>
 		    <br/><br/>
