--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-modal-view>
 <div class="background"></div>
   <ion-header-bar>
-    <h1 class="title">Login</h1>
+    <h1 class="title">Ingresar</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closeLogin()">Close</button>
     </div>
@@ -10,15 +10,19 @@
     <form ng-submit="doLogin()">
       <div class="list">
         <label class="item item-input">
-          <span class="input-label">Username</span>
+          <span class="input-label">Usuario</span>
           <input type="text" ng-model="loginData.username">
         </label>
         <label class="item item-input">
-          <span class="input-label">Password</span>
+          <span class="input-label">Contraseña</span>
           <input type="password" ng-model="loginData.password">
         </label>
         <label class="item">
-          <button class="button button-block button-balanced" type="submit">Log in</button>
+          <button class="button button-block button-balanced" type="submit">Ingresar</button>
+        </label>
+        <label class="item">
+          <center><p>¿Aún no tienes una cuenta?</p></center>
+          <button class="button button-block button-balanced" ng-click="openRegistro()" type="button">Registrar</button>
         </label>
       </div>
     </form>
