Imagen pregunta agregada

--- a/www/templates/trivia.html
+++ b/www/templates/trivia.html
@@ -10,7 +10,7 @@
       </div>
 	  <div ng-show="!finish" style="width:70%; height: 100%; background-position: bottom;" id="triviaDiv">
 	  		<br/><br/>
-		    <image ></image>
+		    <img src="../img/PreguntaBanner.jpg"></img>
 		    <br/><br/>
 		    <h1 id="pregunta" class="animated tada"> {{pregunta.title}} </h1>
 		    <br/><br/>
