--- a/www/css/style.css
+++ b/www/css/style.css
@@ -23,3 +23,17 @@
 	background-position: center; 
 	background-size: 100%;
 }
+
+p {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+h3{
+    font-family: "Gloria Hallelujah";
+    font-size: 24px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 26.4px;
+}
