--- a/www/templates/cerrarSesion.html
+++ b/www/templates/cerrarSesion.html
@@ -11,7 +11,7 @@
       <div class="list">
           <center><p>¿Deseas cerrar tu sesión?</p></center>
           <button class="button button-block button-balanced" type="submit">Cerrar sesión</button>
-          <button class="button button-block button-positive" ng-click="closeCerrarSession()" type="button" >Cancelar</button>
+          <button class="button button-block button-assertive" ng-click="closeCerrarSession()" type="button" >Cancelar</button>
         </label>
       </div>
     </form>
