--- a/www/templates/trivia.html
+++ b/www/templates/trivia.html
@@ -4,15 +4,15 @@
   	<center>
       <div ng-show="finish" id=finishDiv>
         <br/><br/>
-        <h1 class="animated bounce" style="font-size: 40px; font-style: italic; font-family:cursive;">{{loginData.username}}, has finalizado la trivia de hoy!</h1>
+        <h1 class="animated bounce" style="font-size: 24px; font-style: Gloria Hallelujah; font-family:cursive;">{{usuarioActivo}}, has finalizado la trivia de hoy!</h1>
         <br/><br/><br/><br/>
-        <h1 class="animated bounce" style="font-size: 40px; font-style: italic; font-family:cursive;"> puntaje: {{puntaje}}</h1>
+        <h1 class="animated bounce" style="font-size: 30px; font-style: Gloria Hallelujah; font-family:cursive;"> puntaje: {{puntaje}}</h1>
       </div>
 	  <div ng-show="!finish" style="width:70%; height: 100%; background-position: bottom;" id="triviaDiv">
 	  		<br/><br/>
 		    <img src="../img/PreguntaBanner.jpg"></img>
 		    <br/><br/>
-		    <h1 id="pregunta" class="animated tada"> {{pregunta.title}} </h1>
+		    <h3 id="pregunta" class="animated tada"> {{pregunta.title}} </h3>
 		    <br/><br/>
 		    <img class="animated bounce" src="" />
 		    <button id="botonVerdadero" class="button button-block button-balanced animated rubberBand" ng-click="animar(); doAnswer(true)">Verdadero</button>
