--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,8 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
-      <!--<ion-nav-back-button>-->
-      <!--</ion-nav-back-button>-->
+      <ion-nav-back-button>
+      </ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
@@ -10,7 +10,7 @@
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
-  <input type="text" id="usernameLogin" ng-show="false" value="nn">
+  <input type="text" id="usernameLogin" ng-show="true" value="Logeate!">
   <ion-side-menu side="left" id="menuTrivia">
     <ion-header-bar class="bar-stable">
       <h1 class="title">RPSapp Menu</h1>
