Algunas correcciones en el estilo

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,7 +20,7 @@
 #menuTrivia {
 	background-image: url('../img/RPS1.png'); 
 	background-repeat:no-repeat; 
-	background-position: center; 
+	background-position: bottom; 
 	background-size: 30%;
 }
 
@@ -34,6 +34,17 @@ h3{
     font-size: 24px;
     font-style: normal;
     font-variant: normal;
+    padding-top: 20px;
     font-weight: 500;
     line-height: 26.4px;
+}
+
+@font-face {
+  font-family: 'Gloria Hallelujah';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Gloria Hallelujah'), 
+        local('GloriaHallelujah'), 
+        url(http://fonts.gstatic.com/s/gloriahallelujah/v8/CA1k7SlXcY5kvI81M_R28cNDay8z-hHR7F16xrcXsJw.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
