--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -34,6 +34,10 @@
         <ion-item ng-show="!permiso" menu-close href="#/app/privacidad" >
           Declaración de privacidad
         </ion-item>
+        <ion-item menu-close href="#/app/acerca" >
+          Acerca de
+        </ion-item>
+
       </ion-list>
     </ion-content>
   </ion-side-menu>
