Listos los puntajes

--- a/www/templates/puntajes.html
+++ b/www/templates/puntajes.html
@@ -17,7 +17,7 @@
 			    <tbody>
 					<tr style="width:80%"  ng-repeat="puntajes in puntajeSemana | filter:searchText">
 						<td><center>{{puntajes.username}}</center></td>
-						<td><center>{{puntajes.semana1}}</center></td>
+						<td><center>{{puntajes.score}}</center></td>
 					</tr>
 				</tbody>
 			</table>
