--- a/www/templates/acerca.html
+++ b/www/templates/acerca.html
@@ -2,32 +2,35 @@
 	<div class="background" ></div>
 	<ion-content>
 	<center>
+    <img src="img/logo.png" class="animated rubberBand" id="rps-logo" onclick="$(this).toggleClass('animate rubberBand');" />
 	<p style="width:90%">
-    <h3>Aplicación</h3>
-    Esta aplicación fue desarrollada por profesores y estudiantes de la Universidad de Antioquia para ser usada por la comunidad universitaria de la Universidad de Antioquia. Se compone de una trivia acerca de conceptos nutricionales abordados en eventos por los integrantes del Grupo de Investigación en Psicología Cognitiva (PSICOG) en eventos semanales. Además cuenta con una sección informativa en la cual los usuarios pueden leer programación de eventos y datos importantes que el grupo PSICOG comparta por este medio. Los usuarios tienen la opción de registrarse para acceder a un nivel competitivo de la trivia por el cual podrán acceder a beneficios y bonificaciones en los eventos presenciales programado por PSICOG.
-    <br/>
-    <h3>Integrantes</h3>
-    <b>Grupo de Ingeniería de Sistemas:</b><br/>
-    -Federico Ocampo Ortiz (Estudiante)<br/>
-    -Adrián Yadir Jimenez Carrillo (Estudiante)<br/>
-    -Julián Vásquez Giraldo (Estudiante)<br/>
-    -Diana Margot López Herrera (Docente)<br/>
-    <br/><br/>
-    <b>Grupo de Psicología:</b><br/>
-    -Alexis Castaño García (Estudiante)<br/>
-    -Laura Tatiana Flórez Roldan (Estudiante)<br/>
-    -Ana Isabel Morales Maya (Estudiante)<br/>
-    -Sebastián Rojas Álvarez (Estudiante)<br/>
-    -Ana María Arias (Docente)<br/>
-    -Germán Darío Zapata (Docente)<br/>
-    <br/>
-    <b>Diseñador:</b><br/>
-    -Amigo de Alexis
-    <br/>
-    <img src="img/udea.png" class="animated pulse" id="udea-logo"/>
-    <br/>
-    <img src="img/ccommons.png" class="animated pulse" id="udea-logo"/>
+        Esta aplicación fue desarrollada por profesores y estudiantes de la Universidad de Antioquia para ser usada por la comunidad universitaria. Se compone de una trivia acerca de conceptos nutricionales abordados en eventos semanales por integrantes del Grupo de Investigación en Psicología Cognitiva (PSICOG). Además cuenta con una sección informativa donde los usuarios pueden leer programación de eventos y datos importantes relacionados con el proyecto. Los usuarios tienen la opción de registrarse para competir con otros usuario en la trivia y acceder a beneficios y bonificaciones en eventos presenciales programados por PSICOG.
+        <br/>
     </p>
+    <center style="width: 90%">
+        <b>Grupo de Ingeniería de Sistemas:</b><br/>
+        Federico Ocampo Ortiz (Estudiante)<br/>
+        Adrián Yadir Jimenez Carrillo (Estudiante)<br/>
+        Julián Vásquez Giraldo (Estudiante)<br/>
+        Diana Margot López Herrera (Docente)<br/>
+        <br/>
+        <b>Grupo de Psicología:</b><br/>
+        Alexis Castaño García (Estudiante)<br/>
+        Laura Tatiana Flórez Roldan (Estudiante)<br/>
+        Ana Isabel Morales Maya (Estudiante)<br/>
+        Sebastián Rojas Álvarez (Estudiante)<br/>
+        Ana María Arias (Docente)<br/>
+        Germán Darío Zapata (Docente)<br/>
+        <br/>
+        <b>Colaborador Gráfico:</b><br/>
+        Sebastian Zapata
+        <br/>
+    </center>
+    <img src="img/udea.png" class="animated pulse" id="udea-logo"/>
+    <img src="img/ccommons.png" id="commons-logo"/>
+    <div>Some icons made by <a href="http://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+    <br/>
+    
     </center>
 	</ion-content>
 </ion-view>
