--- a/www/templates/privacidad.html
+++ b/www/templates/privacidad.html
@@ -6,8 +6,8 @@
     <h1>DECLARACIÓN DE PRIVACIDAD</h1>
     <br/>
     <p style="width:90%">
-    Esta aplicacion hace parte del Proyecto Rico pero Saludable a cargo tanto de la linea de Psicología de la Salud adscrita al grupo de Investigación de Psicología Cognitica como de la Unidad de Bienestar de la Facultad de Ingeniería de la Universidad de Antioquia, en colaboración con estudiantes de Ingeniería de Sistemas y el programa de extensión de la Escuela de Nutrición y Dietética de la misma universidad. <br/>
-    Se tiene como objetivo favorecer los procesos psicológicos asociados a los comportamientos alimentarios saludables en la población estudiantil de dicha Facultad. La información suministrada en la presente "App" es de carácter confidencial y será utilizada únicamente para asuntos académicos asociados al proyecto. Al presionar <b>Acepto</b> usted está autorizando la utilización de estos datos para los fines anteriormente mencionados.	
+    Esta aplicacion hace parte del Proyecto Rico pero Saludable a cargo de la linea de Psicología de la Salud adscrita al grupo de Investigación de Psicología Cognitiva en asociación con la Unidad de Bienestar de la Facultad de Ingeniería de la Universidad de Antioquia. También se cuenta con el apoyo de estudiantes de Ingeniería de Sistemas y el programa de extensión de la Escuela de Nutrición y Dietética de la misma universidad. <br/>
+    Se tiene como objetivo favorecer los procesos psicológicos asociados a los comportamientos alimentarios saludables en la población estudiantil de dicha Facultad. La información suministrada en la presente Aplicación Movil es de carácter confidencial y será utilizada únicamente para asuntos académicos asociados al proyecto. Al presionar <b>Acepto</b> estas autorizando la utilización de estos datos para los fines anteriormente mencionados.	
     </p>
     <img src="img/udea.png" class="animated pulse" id="udea-logo"/>
     <button style="width:50%" menu-toggle="left" class="button button-block button-positive animated rubberBand" ng-click="privacidad();"><b>Acepto</b></button>
